lesson-4/SecuringDocker/deployment-custom-secure-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-nginx-deployment
  namespace: secure-namespace
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: secure-nginx
  template:
    metadata:
      labels:
        app: secure-nginx
    spec:
      containers:
      - name: secure-nginx
        image: andreybyhalenko/custom-secure-nginx:v1.0.1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          fsGroup: 2000
          allowPrivilegeEscalation: false
