lesson-4/SecuringDocker/networkPolicy-secure-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secure-nginx-network-policy
  namespace: secure-namespace
spec:
  podSelector:
    matchLabels:
      app: secure-nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
